@@ -1,0 +1,9 @@
+fileFormatVersion: 2
+guid: 06b7978f942923748a562b05c96f4ed9
+folderAsset: yes
+timeCreated: 1504093392
+licenseType: Free
+DefaultImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
