@@ -7,6 +7,8 @@ TODO:
 
 2017.8.30	K.L.	<k.l.lambda@gmail.com>
 
+	+	FingeringGeneratorEditor: generate pipeline added.
+
 	+	FingeringGenerator: MIDI load implemented.
 	+	FingeringGenerator: created.
 
